--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,19 +1,25 @@
+# Use official PHP image with Apache
 FROM php:8.2-apache
 
-# Install PDO MySQL
-RUN docker-php-ext-install pdo pdo_mysql
+# Install required PHP extensions
+RUN docker-php-ext-install mysqli pdo pdo_mysql
 
-# Enable Apache mod_rewrite
+# Enable Apache mod_rewrite for LavaLust clean URLs
 RUN a2enmod rewrite
 
-# Allow .htaccess overrides
-RUN sed -i '/<Directory \/var\/www\/>/,/<\/Directory>/ s/AllowOverride None/AllowOverride All/' /etc/apache2/apache2.conf
+# Copy app files into container
+WORKDIR /var/www/html
+COPY . /var/www/html
 
-# Copy app files
-COPY . /var/www/html/
+# Set permissions for writable directory
+RUN chown -R www-data:www-data /var/www/html/writable \
+    && chmod -R 775 /var/www/html/writable
 
-# Fix permissions
-RUN chown -R www-data:www-data /var/www/html \
-    && chmod -R 755 /var/www/html
+# Copy Apache config
+COPY ./docker/apache.conf /etc/apache2/sites-available/000-default.conf
 
-EXPOSE 80
+# Expose port
+EXPOSE 8080
+
+# Run Apache in foreground
+CMD ["apache2-foreground"]
